Changed button text from navy to white

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -346,7 +346,7 @@ Contents:
       border: 1.5px solid #0C2340;
       box-shadow: -2.75px 2.75px 0px 0px #0C2340;
       cursor: pointer;
-      color: #0C2340;
+      color: #FFFFFF;
       font-family: "canada-type-gibson", sans-serif;
       font-size: 14px;
       font-weight: 700;
