added border for button text

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -351,6 +351,8 @@ Contents:
       font-size: 14px;
       font-weight: 700;
       text-transform: uppercase;
+      text-border: 1px solid #0C2340;
+      text-border-alignment: outside;
       text-shadow: -1.85px 1.85px 0px rgba(12, 35, 64, 0.2);
       display: flex;
       justify-content: center;
