--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -353,6 +353,7 @@ Contents:
       text-transform: uppercase;
       -webkit-text-stroke: 1px #0C2340;
       text-shadow: -1px -1px 0 #0C2340, 1px -1px 0 #0C2340, -1px 1px 0 #0C2340, 1px 1px 0 #0C2340, -2.75px 2.75px 0 #0C2340;
+      white-space: nowrap;
       display: flex;
       justify-content: center;
       align-items: center;
