added font weight and font style

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -184,6 +184,8 @@ Contents:
   /* existing styles follow */
   .goodr5-overlay, .goodr5-modal {
     font-family: "canada-type-gibson", sans-serif;
+    font-weight: 700;
+    font-style: normal;
     ...
   }
   ...
