The X icon wasn't displaying

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -198,7 +198,7 @@ Contents:
     <div class="goodr5-modal">
         
         <button id="goodr5CloseIcon" class="goodr5-close-icon" aria-label="Close popup">
-          <img src="{{ 'x.svg' | asset_url }}" alt="Close" />
+          <img src="{{ 'x.svg' | asset_url }}" alt="Close" width="20" height="20" />
         </button>
       
       <div class="goodr5-image-container">
