--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -300,7 +300,7 @@ Contents:
       position: absolute;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%);
+      transform: translate(calc(-50% + 1px), -50%);
       text-align: center;
       pointer-events: none;
     }
