readded white-space: no wrap

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -360,7 +360,7 @@ Contents:
       text-transform: uppercase;
       /* -webkit-text-stroke: 1px #0C2340; */
       text-shadow: -1.85px 1.85px 0 #0C2340;
-      /* white-space: nowrap; */
+      white-space: nowrap;
       display: flex;
       justify-content: center;
       align-items: center;
