--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -358,7 +358,7 @@ Contents:
       font-weight: 700;
       font-style: bold; 
       text-transform: uppercase;
-      /* -webkit-text-stroke: 1px #0C2340; */
+      -webkit-text-stroke: 1px #0C2340;
       text-shadow: -1.85px 1.85px 0 #0C2340;
       white-space: nowrap;
       display: flex;
