minor outline ajutments for button text

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -365,7 +365,7 @@ Contents:
       align-items: center;
       margin-bottom: 16px;
       outline: 1px solid #0C2340;
-      outline-offset: -3px;
+      /* outline-offset: -3px; */
     }
 
     .goodr5-btn:hover {
