--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -369,7 +369,7 @@ Contents:
     .goodr5-btn-text {
       border: 1px solid #0C2340;
       padding: 4px 8px;
-      display: inline-block;
+      display: none;
     }
 
     .goodr5-btn:hover {
