minor adjutments to button font

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -224,7 +224,7 @@ Contents:
 
       <div class="goodr5-actions">
         <button id="goodr5ShopBtn" class="goodr5-btn">
-        <span class="goodr5-btn-text">SHOP ALL STYLES</span>
+        SHOP ALL STYLES
         </button>
         
         <a href="#" id="goodr5CloseLink" class="goodr5-close-link">Nah, I Hate Deals</a>
@@ -357,17 +357,13 @@ Contents:
       font-size: 14px;
       font-weight: 900;
       text-transform: uppercase;
-      text-shadow: -1.5px -1.5px 0 #0C2340, 1.5px -1.5px 0 #0C2340, -1.5px  1.5px 0 #0C2340, 1.5px  1.5px 0 #0C2340,
+      text-shadow: -1.85px -1.85px 0 #0C2340, 1.85px -1.85px 0 #0C2340, -1.85px  1.85px 0 #0C2340, 1.85px  1.85px 0 #0C2340,
         -3px 3px 0 #0C2340;
       white-space: nowrap;
       display: flex;
       justify-content: center;
       align-items: center;
       margin-bottom: 16px;
-    }
-
-    .goodr5-btn-text {
-      display: inline-block;
     }
 
     .goodr5-btn:hover {
@@ -447,12 +443,8 @@ Contents:
         box-shadow: -4px 4px 0px 0px #0C2340;
         font-size: 18px;
         margin-bottom: 18px;
-        text-shadow: -2.75px 2.75px 0 #0C2340;
-      }
-
-      .goodr5-btn-text {
-        outline: 1px solid #0C2340;
-        outline-offset: 2px;
+        text-shadow: -2.75px -2.75px 0 #0C2340, 2.75px -2.75px 0 #0C2340, -2.75px  2.75px 0 #0C2340, 2.75px  2.75px 0 #0C2340,
+        -3px 3px 0 #0C2340;
       }
 
       .goodr5-close-link {
