--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -357,8 +357,7 @@ Contents:
       font-size: 14px;
       font-weight: 700;
       text-transform: uppercase;
-      text-shadow: -1.85px -1.85px 0 #0C2340, 1.85px -1.85px 0 #0C2340, -1.85px  1.85px 0 #0C2340, 1.85px  1.85px 0 #0C2340,
-        -3px 3px 0 #0C2340;
+      text-shadow: -1.85px -1.85px 0 #0C2340, 1.85px -1.85px 0 #0C2340, -1.85px  1.85px 0 #0C2340, 1.85px  1.85px 0 #0C2340;
       white-space: nowrap;
       display: flex;
       justify-content: center;
@@ -443,8 +442,7 @@ Contents:
         box-shadow: -4px 4px 0px 0px #0C2340;
         font-size: 18px;
         margin-bottom: 18px;
-        text-shadow: -2.75px -2.75px 0 #0C2340, 2.75px -2.75px 0 #0C2340, -2.75px  2.75px 0 #0C2340, 2.75px  2.75px 0 #0C2340,
-        -3px 3px 0 #0C2340;
+        text-shadow: -2.75px -2.75px 0 #0C2340, 2.75px -2.75px 0 #0C2340, -2.75px  2.75px 0 #0C2340, 2.75px  2.75px 0 #0C2340;
       }
 
       .goodr5-close-link {
