--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -358,7 +358,7 @@ Contents:
       font-weight: 900;
       text-transform: uppercase;
       -webkit-text-stroke: 1px #0C2340;
-      text-shadow: -1.85px 1.85px 0  #0C2340;
+      text-shadow: -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340;
       white-space: nowrap;
       display: flex;
       justify-content: center;
@@ -444,7 +444,7 @@ Contents:
         font-size: 18px;
         margin-bottom: 18px;
         -webkit-text-stroke: 1px #0C2340;
-        text-shadow: -2.75px 2.75px 0 #0C2340;
+        text-shadow: -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340;
       }
 
       .goodr5-close-link {
