made changes for drop shaodw

--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -358,7 +358,7 @@ Contents:
       font-weight: 700;
       text-transform: uppercase;
       /* -webkit-text-stroke: 1px #0C2340; */
-      text-shadow: -1px -1px 0  #0C2340, -2.25px 2.25px 0  #0C2340, 1px -1px 0  #0C2340, 1px 1px 0  #0C2340, -2.25px 2.25px 0  #0C2340;
+      text-shadow: -0.67px -0.67px 0  #0C2340, -1.85px 1.85px 0  #0C2340, 0.67px -0.67px 0  #0C2340, 0.67px 0.67px 0  #0C2340, -1.85px 1.85px 0  #0C2340;
       white-space: nowrap;
       display: flex;
       justify-content: center;
@@ -450,9 +450,8 @@ Contents:
         box-shadow: -4px 4px 0px 0px #0C2340;
         font-size: 18px;
         margin-bottom: 18px;
-        /* -webkit-text-stroke: 1px #0C2340;
-        text-shadow: -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340,
-          -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340, -2.75px 2.75px 0 #0C2340; */
+        /* -webkit-text-stroke: 1px #0C2340; */
+        text-shadow: -1px -1px 0  #0C2340, -2.25px 2.25px 0  #0C2340, 1px -1px 0  #0C2340, 1px 1px 0  #0C2340, -2.25px 2.25px 0  #0C2340;
       }
 
       .goodr5-close-link {
