--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -353,9 +353,9 @@ Contents:
       font-weight: 700;
       text-transform: uppercase;
       /* -webkit-text-stroke: 1px #0C2340; */
-     /* text-shadow: -1px -1px 0  #0C2340, -2.20px 2.20px 0  #0C2340, 1px -1px 0  #0C2340, 1px 1px 0  #0C2340, -2.20px 2.20px 0  #0C2340; */
-      text-shadow: -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340,
-        -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340;
+     text-shadow: -1px -1px 0  #0C2340, -1px 1.20px 0  #0C2340, 1px -1px 0  #0C2340, 1px 1px 0  #0C2340, -1px 1.20px 0  #0C2340;
+      /* text-shadow: -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340,
+        -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340; */
       white-space: nowrap;
       display: flex;
       justify-content: center;
@@ -448,7 +448,7 @@ Contents:
         font-size: 18px;
         margin-bottom: 18px;
         /* -webkit-text-stroke: 1px #0C2340; */
-        text-shadow: -1.2px -1.2px 0  #0C2340, -1.2px 2.85px 0  #0C2340, 1.2px -1.2px 0  #0C2340, 1.2px 1.2px 0  #0C2340, -1.2px 2.95px 0  #0C2340;
+        text-shadow: -1.2px -1.2px 0  #0C2340, -1.2px 2.85px 0  #0C2340, 1.2px -1.2px 0  #0C2340, 1.2px 1.2px 0  #0C2340, -1.2px 1.2px 0  #0C2340;
         /* text-shadow: -1.2px -1.2px 0 #0C2340, -1.2px 1.2px 0 #0C2340, 1.2px -1.2px 0 #0C2340, 1.2px 1.2px 0 #0C2340,
           -1.2px 2.75px 0 #0C2340, -1.2px 2.75px 0 #0C2340, -1.2px 2.75px 0 #0C2340, -1.2px 2.75px 0 #0C2340; */
       }
