--- a/sections/goodr5-popup.liquid
+++ b/sections/goodr5-popup.liquid
@@ -352,7 +352,7 @@ Contents:
       font-size: 14px;
       font-weight: 700;
       text-transform: uppercase;
-      /* -webkit-text-stroke: 1px #0C2340; */
+      -webkit-text-stroke: 0.67px #0C2340;
      text-shadow: -0.67px -0.67px 0  #0C2340, -0.67px 0.67px 0  #0C2340, 0.67px -0.67px 0  #0C2340, 0.67px 0.67px 0  #0C2340;
       /* text-shadow: -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340,
         -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340, -1.85px 1.85px 0  #0C2340; */
@@ -447,7 +447,7 @@ Contents:
         box-shadow: -4px 4px 0px 0px #0C2340;
         font-size: 18px;
         margin-bottom: 18px;
-        /* -webkit-text-stroke: 1px #0C2340; */
+        -webkit-text-stroke: 1px #0C2340;
         text-shadow: -1px -1px 0  #0C2340, -1px 1px 0  #0C2340, 1px -1px 0  #0C2340, 1px 1px 0  #0C2340;
         /* text-shadow: -1.2px -1.2px 0 #0C2340, -1.2px 1.2px 0 #0C2340, 1.2px -1.2px 0 #0C2340, 1.2px 1.2px 0 #0C2340,
           -1.2px 2.75px 0 #0C2340, -1.2px 2.75px 0 #0C2340, -1.2px 2.75px 0 #0C2340, -1.2px 2.75px 0 #0C2340; */
